--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ h3
     font-family: 'Ubuntu', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Cantarell', 'Open Sans', 'sans-serif';
     font-style: italic;
     text-align: left;
-    margin-left 250px;
+    margin-left: 250px;
 }
 
 h4
@@ -118,7 +118,7 @@ h4
     font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'sans-serif';
     text-decoration: underline;
     text-align: left;
-    margin-left 250px;
+    margin-left: 250px;
 }
 
 ul
@@ -160,12 +160,12 @@ p
 
 header, nav, footer
 {
-    background-color: rgb(180, 180, 180;
+    background-color: rgb(180, 180, 180);
     font-size: 1em; 
     padding: 20px;
     margin: 20px;
     text-align: center;
     border: solid rgb(41, 132, 144) 2px;
     border-radius: 10px;
-    font-family: 'Ubuntu', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Cantarell', 'Open Sans', 'sans-serif';t;
+    font-family: 'Ubuntu', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Cantarell', 'Open Sans', 'sans-serif';
 }
