--- a/style.css
+++ b/style.css
@@ -1,19 +1,13 @@
 body {
     background-image: url("image/—Pngtree—torn\ paper\ edges\ ripped\ paper_5335443.png");
     background-attachment: fixed;
-    /*back image fixée */
     margin: 10px;
-    /*border: solid rgb(41, 132, 144) 2px;
-  border-radius: none;*/
     font-size: 1em;
     font-family: "Lucida Sans Unicode", "roboto", "Trebuchet MS", "Lucida Grande", "Lucida Sans";
     text-align: left;
 }
 
-#photo
-/* Faire flotter une image dans un texte */
-
-{
+#photo {
     float: right;
     margin-right: 200px;
     margin-top: 100px;
@@ -23,10 +17,7 @@ body {
     background-color: rgb(180, 180, 180);
 }
 
-#contact
-/* Faire flotter un paragraphe */
-
-{
+#contact {
     float: left;
     margin-left: 200px;
     margin-top: 100px;
@@ -36,43 +27,27 @@ body {
     background-color: rgb(180, 180, 180);
 }
 
-.under
-/* Arrêter de faire flotter le texte ("à propos de moi") */
-
-{
+.under {
     clear: both;
     padding-bottom: 20px;
     margin-bottom: 20px;
 }
 
-a:hover
-/* Apparence au survol des liens */
-
-{
+a:hover {
     text-decoration: underline;
     color: rgb(102, 158, 102);
 }
 
-a:active
-/* Quand le visiteur clique sur le lien */
-
-{
+a:active {
     background-color: #b16dd8;
 }
 
-a:focus
-/* Quand le visiteur sélectionne le lien */
-
-{
+a:focus {
     background-color: #84d5b2de;
 }
 
-a:visited
-/* Quand le visiteur a déjà vu la page concernée */
-
-{
+a:visited {
     color: rgb(113, 5, 237);
-    /* Appliquer une couleur grise */
 }
 
 section {
@@ -82,7 +57,6 @@ section {
     padding: 20px;
     border: solid rgb(41, 132, 144) 2px;
     border-radius: 10px;
-    /*box-shadow: 6px black;*/
 }
 
 .communication,
@@ -141,7 +115,6 @@ ul {
     padding: 20px;
     border: solid rgb(41, 132, 144) 2px;
     border-radius: 10px;
-    /*display:none;*/
 }
 
 #pylone_type {
